--- a/_pages/member-archive.html
+++ b/_pages/member-archive.html
@@ -7,7 +7,7 @@ title: "Members"
 {% for member_hash in site.data.authors %}
     {% assign member = member_hash[1] %}
     {% if member.name %}<h2 class="page__title" itemprop="headline">{{ member.name }}</h2>{% endif %}
-    {% if member.avatar %}<img src={{ member.avatar}}>{% endif %}
+    {% if member.avatar %}<div style="max-height: 4rem;"><img src={{ member.avatar}}></div>{% endif %}
     {% if member.email %} <p class="page__meta"><i class="fa fa-envelope-square" aria-hidden="true"></i> {{ member.email }}</p> {% endif %}
     {% if member.bio %}<p class="archive__item-excerpt" itemprop="description">{{ member.bio }}</p>{% endif %}
 {% endfor %}
