--- a/_pages/member-archive.html
+++ b/_pages/member-archive.html
@@ -8,8 +8,10 @@ title: "Members"
     {% assign member = member_hash[1] %}
     {% if member.name %}<h2 class="page__title" itemprop="headline">{{ member.name }}</h2>{% endif %}
     {% if member.avatar %}<img src={{ member.avatar}} width="100" >{% endif %}
-    {% if member.bio %}<p class="archive__item-excerpt" itemprop="description">{{ member.bio }}</p>{% endif %}
-    {% if member.email %} <p class="archive__item-excerpt" itemprop="description">{{ member.email }}</p> {% endif %}
+    {% if member.bio %}<p class="archive__item-excerpt" itemprop="description">{{ member.bio }}
+        {% if member.email %} <br> {{ member.email }} {% endif %}
+    </p>
+    {% endif %}
 {% endfor %}
 
 
