test of founders tag

--- a/_pages/member-archive.html
+++ b/_pages/member-archive.html
@@ -4,7 +4,7 @@ permalink: /members/
 title: "Members"
 ---
 
-<p>[* means founding member of BUQEYE collaboration]</p>
+<p class="archive__item-excerpt" itemprop="description">[* means founding member of BUQEYE collaboration]</p>
 
 {% for member_hash in site.data.authors %}
     {% assign member = member_hash[1] %}
