tweaking publications list

--- a/_pages/publications-archive.html
+++ b/_pages/publications-archive.html
@@ -8,9 +8,13 @@ title: "Publications"
 {% for year in postsByYear reversed %}
   <h2 id="{{ year.name | slugify }}" class="archive__subtitle">{{ year.name }}</h2>
   {% for post in year.items reversed %}
-      <h3><a href="{{ post.link }}">{{ post.title }}</a></h3>
       <p>
-    	<a href="https://arxiv.org/abs/{{post.arxiv}}">arXiv:{{post.arxiv}}</a>
+      	<a href="{{ post.url | relative_url }}">{{ post.title }}</a>,
+      	{{ post.author }},
+      	<a href="{{ post.link }}">{{ post.pub }}</a>,
+    	<a href="https://arxiv.org/abs/{{post.arxiv}}">arXiv:{{post.arxiv}}</a>.
       </p>
+  {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}</p>{% endif %}
+   
   {% endfor %}
 {% endfor %}
