--- a/_pages/publications-archive.html
+++ b/_pages/publications-archive.html
@@ -11,7 +11,9 @@ title: "Publications"
       <p>
       	<a href="{{ post.url | relative_url }}">{{ post.title }}</a>,
       	{{ post.author }},
-      	<a href="{{ post.link }}">{{ post.pub }}</a>,
+      	{% if post.pub %}
+        	<a href="{{ post.link }}">{{ post.pub }}</a>,
+        {% endif %}
     	<a href="https://arxiv.org/abs/{{post.arxiv}}">arXiv:{{post.arxiv}}</a>.
       </p>
   {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}</p>{% endif %}
