added software entries

--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -1,9 +1,23 @@
 ---
 layout: archive
-title: "Python packages and Jupyter notebooks"
+title: "Software"
 permalink: /software/
 ---
 
-{% for post in site.talks reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+<h2 class="archive__subtitle">Python packages</h2>
+
+<ul>
+  <li><a href="https://buqeye.github.io/gsum">gsum: A Bayesian model of series convergence using Gaussian sums</a>
+</ul>
+
+
+<hr>
+
+<h2 class="archive__subtitle">Jupyter notebooks</h2>
+
+<ul>
+  <li><a href="https://github.com/buqeye/gsum/blob/master/docs/notebooks/correlated_EFT_publication.ipynb">
+  	Correlated truncation errors in effective field theory: The code behind the manuscript</a>.
+  	This notebook provides the code to reproduce all of the plots from Melendez et al. (2019)
+  	<a href="https://arxiv.org/abs/1904.10581">arXiv:1904.10581</a>. 
+</ul>
