--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -7,7 +7,7 @@ permalink: /software/
 <h2 class="archive__subtitle">Python packages</h2>
 
 <ul>
-  <li><a href="https://buqeye.github.io/gsum">gsum: A Bayesian model of series convergence using Gaussian sums</a>
+  <li><a href="https://buqeye.github.io/gsum">gsum: A Bayesian model of series convergence using Gaussian sums</a>.
 </ul>
 
 
@@ -18,6 +18,6 @@ permalink: /software/
 <ul>
   <li><a href="https://github.com/buqeye/gsum/blob/master/docs/notebooks/correlated_EFT_publication.ipynb">
   	Correlated truncation errors in effective field theory: The code behind the manuscript</a>.
-  	This notebook provides the code to reproduce all of the plots from Melendez et al. (2019)
+  	This notebook provides the code to reproduce all of the plots from Melendez et al. (2019),
   	<a href="https://arxiv.org/abs/1904.10581">arXiv:1904.10581</a>. 
 </ul>
