--- a/_pages/talks-archive.html
+++ b/_pages/talks-archive.html
@@ -1,12 +1,12 @@
 ---
 layout: archive
-title: "Talks and Presentations"
+title: "Talks"
 permalink: /talks/
 ---
 
-{% for post in site.talks reversed %}
-  {% include archive-single.html %}
+<ul>
+
+  <li><a href="/assets/talks/melendez_HADRON2019.pdf"><i>Combining Physics and Bayesian Statistics to Validate Models and Infer Their Parameters</i></a>, presented by Jordan Melendez at the 18th International Conference on Hadron Spectroscopy and Structure (HADRON2019) in Guilin, China, August, 2019.
 
 
-  
-{% endfor %}
+</ul>
