added additional BUQEYE talks

--- a/_pages/talks-archive.html
+++ b/_pages/talks-archive.html
@@ -1,12 +1,28 @@
 ---
 layout: archive
-title: "Talks"
+title: "BUQEYE Talks"
 permalink: /talks/
 ---
 
 <ul>
 
-  <li><a href="/assets/talks/melendez_HADRON2019.pdf"><i>Combining Physics and Bayesian Statistics to Validate Models and Infer Their Parameters</i></a>, presented by Jordan Melendez at the 18th International Conference on Hadron Spectroscopy and Structure (HADRON2019) in Guilin, China, August, 2019.
+  <li>
+  	<a href="/assets/talks/melendez_HADRON2019.pdf"><i>Combining Physics and Bayesian Statistics to Validate Models and Infer Their Parameters</i></a>, presented by Jordan Melendez at the <a href="https://indico.ihep.ac.cn/event/9119/overview">18th International Conference on Hadron Spectroscopy and Structure (HADRON2019)</a> in Guilin, China, August, 2019.
+  </li>
+
+  <li>
+    <a href="/assets/talks/INT_2019_Wesolowski.pdf"><i>Moving forward with uncertainty quantification in abinitio calculations using Bayesian methods</i></a>, presented by Sarah Wesolowski at the INT program <a href="http://www.int.washington.edu/PROGRAMS/19-2a/">Nuclear Structure at the
+    Crossroads</a> in Seattle, WA, July, 2019.
+  </li>
+  
+  <li>
+    <a href="/assets/talks/triumf_2019_phillips.pdf"><i>Modeling Eft Truncation Errors Using Gaussian Processes</i></a>, presented by Daniel Phillips at the workshop on <a href="https://abinitio.triumf.ca/2019/">Progress in Ab Initio Techniques in Nuclear Physics<a> at TRIUMF in Vancouver, BC, Canada, February, 2019.
+  </li>  
+
+  <li>
+  	<a href="/assets/talks/MSU_statistics_conference_2018_Furnstahl_pdf.pdf"><i>Bayesian Statistics for
+Effective Field Theories</i></a>, presented by Dick Furnstahl at the <a href="https://stt.msu.edu/MSUStatSymposium2018/">Michigan State Symposium on Mathematical Statistics and Applications</a> in East Lansing, MI, September, 2018.
+  </li>  
 
 
 </ul>
