Added 2 ISNET-7 talks and FB22 talk

--- a/_pages/talks-archive.html
+++ b/_pages/talks-archive.html
@@ -5,7 +5,16 @@ permalink: /talks/
 ---
 
 <ul>
+  
+  <li>
+    <a href="/assets/talks/drischler_ISNET7.pdf"><i>Truncation errors in effective field theory for infinite nuclear matter</i></a>, 
+    presented by Christian Drischler at <a href="https://www.chalmers.se/en/conference/Bayesian%20Inference%20in%20Subatomic%20Physics/Pages/default.aspx">Bayesian Inference in Subatomic Physics</a> in Göteborg, Sweden, September, 2019.
+  </li>
 
+  <li>
+    <a href="/assets/talks/phillips_ISNET7.pdf"><i>Bayesian parameter estimation for nuclear forces</i></a>, presented by Daniel Phillips at <a href="https://www.chalmers.se/en/conference/Bayesian%20Inference%20in%20Subatomic%20Physics/Pages/default.aspx">Bayesian Inference in Subatomic Physics</a> in Göteborg, Sweden, September, 2019.
+  </li>
+  
   <li>
   	<a href="/assets/talks/melendez_HADRON2019.pdf"><i>Combining Physics and Bayesian Statistics to Validate Models and Infer Their Parameters</i></a>, presented by Jordan Melendez at the <a href="https://indico.ihep.ac.cn/event/9119/overview">18th International Conference on Hadron Spectroscopy and Structure (HADRON2019)</a> in Guilin, China, August, 2019.
   </li>
@@ -16,13 +25,17 @@ permalink: /talks/
   </li>
   
   <li>
-    <a href="/assets/talks/triumf_2019_phillips.pdf"><i>Modeling Eft Truncation Errors Using Gaussian Processes</i></a>, presented by Daniel Phillips at the workshop on <a href="https://abinitio.triumf.ca/2019/">Progress in Ab Initio Techniques in Nuclear Physics<a> at TRIUMF in Vancouver, BC, Canada, February, 2019.
+    <a href="/assets/talks/triumf_2019_phillips.pdf"><i>Modeling EFT Truncation Errors Using Gaussian Processes</i></a>, presented by Daniel Phillips at the workshop on <a href="https://abinitio.triumf.ca/2019/">Progress in Ab Initio Techniques in Nuclear Physics<a> at TRIUMF in Vancouver, BC, Canada, February, 2019.
   </li>  
 
   <li>
   	<a href="/assets/talks/MSU_statistics_conference_2018_Furnstahl_pdf.pdf"><i>Bayesian Statistics for
 Effective Field Theories</i></a>, presented by Dick Furnstahl at the <a href="https://stt.msu.edu/MSUStatSymposium2018/">Michigan State Symposium on Mathematical Statistics and Applications</a> in East Lansing, MI, September, 2018.
   </li>  
-
+    
+  <li>
+     <a href="/assets/talks/phillips_FB22.pdf"><i>S-factor and scattering parameters from 3He + 4He->7Be + gamma data</i></a>, presented by Daniel Phillips 
+    at the <a href="https://fb22-caen.sciencesconf.org">22nd International Conference on Few-body Problems in Physics</a> in Caen, France, July 2018. 
+  </li>
 
 </ul>
