added talk by Christian D.

--- a/_pages/talks-archive.html
+++ b/_pages/talks-archive.html
@@ -7,6 +7,11 @@ permalink: /talks/
 <ul>
   
   <li>
+    <a href="/assets/talks/Conference9_Drischler.pdf"><i>Recent progress in the nuclear-matter equation of state from chiral effective field theory</i></a>, 
+    presented by Christian Drischler at <a href="https://indico.cern.ch/event/782948/">Next Frontiers in the Search for Dark Matter</a> in Florence, Italy, September, 2019.
+  </li>
+  
+  <li>
     <a href="/assets/talks/polarisabilities.181010.ISNET-6-darmstadt-20+15min.pdf"><i>Compton Scattering: How to Optimise Experiments (?)</i></a>, 
     presented by Harald Grie&szlig;hammer at <a href="https://www.chalmers.se/en/conference/Bayesian%20Inference%20in%20Subatomic%20Physics/Pages/default.aspx">Bayesian Inference in Subatomic Physics</a> in Göteborg, Sweden, September, 2019.
   </li>
