dividing into sections

--- a/_pages/talks-archive.html
+++ b/_pages/talks-archive.html
@@ -42,6 +42,11 @@ Effective Field Theories</i></a>, presented by Dick Furnstahl at the <a href="ht
 </ul>
 
 
+<p>
+Return to <a href="#Contents">Contents</a>
+</p>
+
+
 <hr>
 
 <h2><a name="Applications">Applications</a></h2>
