--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -8,7 +8,8 @@ permalink: /software/
 
 <ul>
   <li><a href="https://buqeye.github.io/gsum">gsum: A Bayesian model of series convergence using Gaussian sums</a>.
-  The gsum package provides convenient classes that allow one to analyze the convergence pattern of Effective Field Theory (EFT) observables. Specifically, this is a conjugacy-based implementation of the statistical model described in <a href="https://arxiv.org/abs/1904.10581">arXiv:1904.10581</a>.
+  The gsum package provides convenient classes that allow one to analyze the convergence pattern of Effective Field Theory (EFT) observables. Specifically, this is a conjugacy-based implementation of the statistical model described in Melendez et al. (2019),
+  <a href="https://arxiv.org/abs/1904.10581">arXiv:1904.10581</a>.
 </ul>
 
 
