added first cheatsheet for pointwise truncation errors

--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -4,6 +4,15 @@ title: "Software"
 permalink: /software/
 ---
 
+<h2 class="archive__subtitle">BUQEYE Cheatsheets</h2>
+
+<ul>
+  <li><a href="/assets/cheatsheets/buqeye_cheatsheet_v2.pdf"><i>The BUQEYE Cheatsheet for Pointwise Truncation Errors (arXiv:1904.10581)</i></a>
+</ul>
+
+
+<hr>
+
 <h2 class="archive__subtitle">Python packages</h2>
 
 <ul>
