updated cheatsheet description

--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -7,7 +7,7 @@ permalink: /software/
 <h2 class="archive__subtitle">BUQEYE Cheatsheets</h2>
 
 <ul>
-  <li><a href="/assets/cheatsheets/buqeye_cheatsheet_v2.pdf"><i>The BUQEYE Cheatsheet for Pointwise Truncation Errors (arXiv:1904.10581)</i></a>
+  <li><a href="/assets/cheatsheets/buqeye_cheatsheet_v2.pdf"><i>The BUQEYE Cheatsheet for Pointwise Truncation Errors</i></a> (based on Appendix A in arXiv:1904.10581).
 </ul>
 
 
