--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -7,7 +7,7 @@ permalink: /software/
 <h2 class="archive__subtitle">BUQEYE Cheatsheets</h2>
 
 <ul>
-  <li><a href="/assets/cheatsheets/buqeye_cheatsheet_v2.pdf"><i>The BUQEYE Cheatsheet for Pointwise Truncation Errors</i></a> (based on Appendix A in arXiv:1904.10581).
+  <li><a href="/assets/cheatsheets/buqeye_cheatsheet_v2.pdf"><i>The BUQEYE Cheatsheet for Pointwise Truncation Errors</i></a> (based on Appendix A in <a href="https://arxiv.org/abs/1904.10581">arXiv:1904.10581</a>).
 </ul>
 
 
