--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -30,7 +30,7 @@ permalink: /software/
   <li><a href="https://github.com/buqeye/gsum/blob/master/docs/notebooks/correlated_EFT_publication.ipynb">
   	Correlated truncation errors in effective field theory: The code behind the manuscript</a>.
   	This notebook provides the code to reproduce all of the plots from Melendez et al. (2019),
-  	<a href="https://arxiv.org/abs/1904.10581">arXiv:1904.10581</a> [<a href="10.1103/PhysRevC.100.044001">]. 
+  	<a href="https://arxiv.org/abs/1904.10581">arXiv:1904.10581</a> [<a href="https://journals.aps.org/prc/abstract/10.1103/PhysRevC.100.044001">Phys. Rev. C 100, 044001 (2019)</a>]. 
 
 
 </ul>
