formatting for coming soon list

--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -31,6 +31,7 @@ permalink: /software/
   	Correlated truncation errors in effective field theory: The code behind the manuscript</a>.
   	This notebook provides the code to reproduce all of the plots from Melendez et al. (2019),
   	<a href="https://arxiv.org/abs/1904.10581">arXiv:1904.10581</a> [<a href="https://journals.aps.org/prc/abstract/10.1103/PhysRevC.100.044001">Phys. Rev. C 100, 044001 (2019)</a>]. 
-
-
 </ul>
+
+<h3 class="archive__subtitle">Coming soon:</h3>
+
