formatting for coming soon list

--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -33,5 +33,7 @@ permalink: /software/
   	<a href="https://arxiv.org/abs/1904.10581">arXiv:1904.10581</a> [<a href="https://journals.aps.org/prc/abstract/10.1103/PhysRevC.100.044001">Phys. Rev. C 100, 044001 (2019)</a>]. 
 </ul>
 
-<h3 class="archive__subtitle">Coming soon:</h3>
+<hr>
+
+<h2 class="archive__subtitle" style="color:red;">Coming soon:</h3>
 
