coming soon heads up for infinite matter papers

--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -28,12 +28,31 @@ permalink: /software/
 
 <ul>
   <li><a href="https://github.com/buqeye/gsum/blob/master/docs/notebooks/correlated_EFT_publication.ipynb">
-  	Correlated truncation errors in effective field theory: The code behind the manuscript</a>.
-  	This notebook provides the code to reproduce all of the plots from Melendez et al. (2019),
+  	<i>Correlated truncation errors in effective field theory:</i> The code behind the manuscript</a>.
+  	This notebook provides the code to reproduce all of the plots in Melendez et al. (2019),
   	<a href="https://arxiv.org/abs/1904.10581">arXiv:1904.10581</a> [<a href="https://journals.aps.org/prc/abstract/10.1103/PhysRevC.100.044001">Phys. Rev. C 100, 044001 (2019)</a>]. 
 </ul>
 
 <hr>
 
 <h2 class="archive__subtitle" style="color:red;">Coming soon:</h3>
+
+<ul>
+
+ <li>
+  Notebooks and data to reproduce (and extend!) all of the plots in 
+  <i>How well do we know the neutron-matter equation of state at the densities
+     inside neutron stars? A Bayesian approach with correlated uncertainties</i>
+      by Drischler et al., 
+   <a href="https://arxiv.org/abs/2004.07232">arXiv:2004.07232</a>
+   and
+  <i>Quantifying uncertainties and correlations in the nuclear-matter equation of state</i>
+      by Drischler et al., <i>(to be posted soon).</i> 
+<!--
+   <a href="">arXiv:2004.</a>.
+-->   
+ </li>  
+
+
+</ul>
 
