coming soon heads up for infinite matter papers

--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -41,12 +41,12 @@ permalink: /software/
 
  <li>
   Notebooks and data to reproduce (and extend!) all of the plots in 
-  <i>How well do we know the neutron-matter equation of state at the densities
-     inside neutron stars? A Bayesian approach with correlated uncertainties</i>
+  <i>"How well do we know the neutron-matter equation of state at the densities
+     inside neutron stars? A Bayesian approach with correlated uncertainties"</i>
       by Drischler et al., 
    <a href="https://arxiv.org/abs/2004.07232">arXiv:2004.07232</a>
    and
-  <i>Quantifying uncertainties and correlations in the nuclear-matter equation of state</i>
+  <i>"Quantifying uncertainties and correlations in the nuclear-matter equation of state"</i>
       by Drischler et al., <i>(to be posted soon).</i> 
 <!--
    <a href="">arXiv:2004.</a>.
