coming soon heads up for Compton paper

--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -51,7 +51,12 @@ permalink: /software/
 <!--
    <a href="">arXiv:2004.</a>.
 -->   
- </li>  
+ </li> 
+
+ <li>
+  Notebooks and data to reproduce (and extend!) all of the plots in 
+  <i>"Designing Optimal Experiments: An Application to Proton Compton Scattering"</i>
+  by Melendez et al., <i>(to be posted soon).</i> 
 
 
 </ul>
