coming soon heads up for infinite matter papers

--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -47,10 +47,8 @@ permalink: /software/
    <a href="https://arxiv.org/abs/2004.07232">arXiv:2004.07232</a>
    and
   <i>"Quantifying uncertainties and correlations in the nuclear-matter equation of state"</i>
-      by Drischler et al., <i>(to be posted soon).</i> 
-<!--
-   <a href="">arXiv:2004.</a>.
--->   
+      by Drischler et al., 
+   <a href="https://arxiv.org/abs/2004.07805">arXiv:2004.07805</a>.
  </li> 
 
  <li>
