--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -54,7 +54,8 @@ permalink: /software/
  <li>
   Notebooks and data to reproduce (and extend!) all of the plots in 
   <i>"Designing Optimal Experiments: An Application to Proton Compton Scattering"</i>
-  by Melendez et al., <i>(to be posted soon).</i> 
+  by Melendez et al., 
+   <a href="https://arxiv.org/abs/2004.11307">arXiv:2004.11307</a>.
 
 
 </ul>
