updated talks to include Furnstahl TRIUMF talk

--- a/_pages/talks-archive.html
+++ b/_pages/talks-archive.html
@@ -15,6 +15,10 @@ permalink: /talks/
 <h2><a name="General">General methods</a></h2>
 
 <ul>
+  
+  <li>
+    <a href="/assets/talks/TRIUMF_2020_Colloquium_Furnstahl.pptx"><i>Theory error bars for nuclei</i></a>, presented by Dick Furnstahl at the workshop on <a href="https://abinitio.triumf.ca/2020/">Progress in Ab Initio Techniques in Nuclear Physics<a> at TRIUMF in Vancouver, BC, Canada, March, 2020.
+  </li>  
 
   <li>
     <a href="/assets/talks/Phillips_ISNET7.pdf"><i>Bayesian parameter estimation for nuclear forces</i></a>, presented by Daniel Phillips at <a href="https://www.chalmers.se/en/conference/Bayesian%20Inference%20in%20Subatomic%20Physics/Pages/default.aspx">Bayesian Inference in Subatomic Physics</a> in Göteborg, Sweden, September, 2019.
