updated talks to include Furnstahl DNP 2019 talk

--- a/_pages/talks-archive.html
+++ b/_pages/talks-archive.html
@@ -57,6 +57,13 @@ Return to <a href="#Contents">Contents</a>
 
 
 <ul>
+
+  
+  <li>
+    <a href="/assets/talks/Bayesian_methods_in_EFT_DNP_Oct2019_Furnstahl.pptx"><i>Application of Bayesian methods 
+in effective field theory (EFT)
+</i></a>, presented by Dick Furnstahl at the <a href="https://dnp2019.columbian.gwu.edu/">Divison of Nuclear Physics meeting of the American Physical Society</a> in Crystal City, VA, October, 2019.
+  </li>  
   
   <li>
     <a href="/assets/talks/Conference9_Drischler.pdf"><i>Recent progress in the nuclear-matter equation of state from chiral effective field theory</i></a>, 
