--- a/_pages/talks-archive.html
+++ b/_pages/talks-archive.html
@@ -61,8 +61,7 @@ Return to <a href="#Contents">Contents</a>
   
   <li>
     <a href="/assets/talks/Bayesian_methods_in_EFT_DNP_Oct2019_Furnstahl.pptx"><i>Application of Bayesian methods 
-in effective field theory (EFT)
-</i></a>, presented by Dick Furnstahl at the <a href="https://dnp2019.columbian.gwu.edu/">Divison of Nuclear Physics meeting of the American Physical Society</a> in Crystal City, VA, October, 2019.
+in effective field theory (EFT)</i></a>, presented by Dick Furnstahl at the <a href="https://dnp2019.columbian.gwu.edu/">Divison of Nuclear Physics meeting of the American Physical Society</a> in Crystal City, VA, October, 2019.
   </li>  
   
   <li>
