links to notebooks and data for infinite matter figures

--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -27,6 +27,26 @@ permalink: /software/
 <h2 class="archive__subtitle">Jupyter notebooks</h2>
 
 <ul>
+
+ <li>
+  <a href="https://github.com/buqeye/nuclear-matter-convergence">Notebooks and data</a> to reproduce (and extend!) all of the plots in 
+  <i>"How well do we know the neutron-matter equation of state at the densities
+     inside neutron stars? A Bayesian approach with correlated uncertainties"</i>
+      by Drischler et al., 
+   <a href="https://arxiv.org/abs/2004.07232">arXiv:2004.07232</a>
+   and
+  <i>"Quantifying uncertainties and correlations in the nuclear-matter equation of state"</i>
+      by Drischler et al., 
+   <a href="https://arxiv.org/abs/2004.07805">arXiv:2004.07805</a>.
+ </li> 
+
+ <li><a href="https://github.com/buqeye/nuclear-matter-convergence/tree/master/analysis/Esym-L">Notebook and data</a> to reproduce the  "Constraints on the Sv–L correlation" plot
+  from <i>"How well do we know the neutron-matter equation of state at the densities
+     inside neutron stars? A Bayesian approach with correlated uncertainties"</i>
+      by Drischler et al., 
+   <a href="https://arxiv.org/abs/2004.07232">arXiv:2004.07232</a>.
+  </li>
+
   <li><a href="https://github.com/buqeye/gsum/blob/master/docs/notebooks/correlated_EFT_publication.ipynb">
   	<i>Correlated truncation errors in effective field theory:</i> The code behind the manuscript</a>.
   	This notebook provides the code to reproduce all of the plots in Melendez et al. (2019),
@@ -39,17 +59,6 @@ permalink: /software/
 
 <ul>
 
- <li>
-  Notebooks and data to reproduce (and extend!) all of the plots in 
-  <i>"How well do we know the neutron-matter equation of state at the densities
-     inside neutron stars? A Bayesian approach with correlated uncertainties"</i>
-      by Drischler et al., 
-   <a href="https://arxiv.org/abs/2004.07232">arXiv:2004.07232</a>
-   and
-  <i>"Quantifying uncertainties and correlations in the nuclear-matter equation of state"</i>
-      by Drischler et al., 
-   <a href="https://arxiv.org/abs/2004.07805">arXiv:2004.07805</a>.
- </li> 
 
  <li>
   Notebooks and data to reproduce (and extend!) all of the plots in 
