moved compton repository to active list

--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -47,25 +47,31 @@ permalink: /software/
    <a href="https://arxiv.org/abs/2004.07232">arXiv:2004.07232</a>.
   </li>
 
+
+ <li>
+  <a href="https://github.com/buqeye/compton-scattering">Notebooks and data</a> to reproduce (and extend!) all of the plots in 
+  <i>"Designing Optimal Experiments: An Application to Proton Compton Scattering"</i>
+  by Melendez et al., 
+   <a href="https://arxiv.org/abs/2004.11307">arXiv:2004.11307</a>.
+ </li>
+
   <li><a href="https://github.com/buqeye/gsum/blob/master/docs/notebooks/correlated_EFT_publication.ipynb">
   	<i>Correlated truncation errors in effective field theory:</i> The code behind the manuscript</a>.
   	This notebook provides the code to reproduce all of the plots in Melendez et al. (2019),
-  	<a href="https://arxiv.org/abs/1904.10581">arXiv:1904.10581</a> [<a href="https://journals.aps.org/prc/abstract/10.1103/PhysRevC.100.044001">Phys. Rev. C 100, 044001 (2019)</a>]. 
+  	<a href="https://arxiv.org/abs/1904.10581">arXiv:1904.10581</a> [<a href="https://journals.aps.org/prc/abstract/10.1103/PhysRevC.100.044001">Phys. Rev. C 100, 044001 (2019)</a>].
+  </li>
+     
 </ul>
 
 <hr>
 
+<!--
 <h2 class="archive__subtitle" style="color:red;">Coming soon:</h3>
 
 <ul>
 
 
- <li>
-  Notebooks and data to reproduce (and extend!) all of the plots in 
-  <i>"Designing Optimal Experiments: An Application to Proton Compton Scattering"</i>
-  by Melendez et al., 
-   <a href="https://arxiv.org/abs/2004.11307">arXiv:2004.11307</a>.
-
 
 </ul>
+-->
 
