added EC notebooks to software list

--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -29,6 +29,13 @@ permalink: /software/
 <ul>
 
  <li>
+  <a href="https://github.com/buqeye/eigenvector-continuation">Notebooks and associated codes </a> to reproduce and extend the figures in
+  <i>"Efficient emulators for scattering using eigenvector continuation"</i>
+      by Furnstahl, Garcia, Millican, and Zhang, 
+   <a href="https://arxiv.org/abs/2007.03635">arXiv:2007.03635</a>.
+ </li> 
+
+ <li>
   <a href="https://github.com/buqeye/nuclear-matter-convergence">Notebooks and data</a> to reproduce (and extend!) all of the plots in 
   <i>"How well do we know the neutron-matter equation of state at the densities
      inside neutron stars? A Bayesian approach with correlated uncertainties"</i>
