--- a/_pages/talks-archive.html
+++ b/_pages/talks-archive.html
@@ -17,6 +17,10 @@ permalink: /talks/
 <ul>
   
   <li>
+    <a href="/assets/talks/TRIUMF_2020_Colloquium_Furnstahl.pptx"><i>Bayesian analysis of EFTs with Jupyter notebooks</i></a>, presented by Dick Furnstahl at the <a href="http://meetings.aps.org/Meeting/DNP20/Content/3900">2020 Fall Meeting of the APS Division of Nuclear Physics<a> (virtual) October, 2020.
+  </li>  
+  
+  <li>
     <a href="/assets/talks/TRIUMF_2020_Colloquium_Furnstahl.pptx"><i>Theory error bars for nuclei</i></a>, presented by Dick Furnstahl at the workshop on <a href="https://abinitio.triumf.ca/2020/">Progress in Ab Initio Techniques in Nuclear Physics<a> at TRIUMF in Vancouver, BC, Canada, March, 2020.
   </li>  
 
