added Furnstahl INT talk from July 2020

--- a/_pages/talks-archive.html
+++ b/_pages/talks-archive.html
@@ -21,6 +21,10 @@ permalink: /talks/
   </li>  
   
   <li>
+    <a href="/assets/talks/Furnstahl_INT_July_2020.pptx"><i>Bayesian analysis of EFTs with Jupyter notebooks</i></a> [<a href="/assets/talks/Furnstahl_INT_July_2020_pdf.pdf">pdf version], presented by Dick Furnstahl at the INT program on <a href="https://www.int.washington.edu/PROGRAMS/20-2b/">Beyond-the-Standard-Model Physics with Nucleons and Nuclei<a> (virtual) July, 2020.
+  </li>  
+  
+  <li>
     <a href="/assets/talks/TRIUMF_2020_Colloquium_Furnstahl.pptx"><i>Theory error bars for nuclei</i></a>, presented by Dick Furnstahl at the workshop on <a href="https://abinitio.triumf.ca/2020/">Progress in Ab Initio Techniques in Nuclear Physics<a> at TRIUMF in Vancouver, BC, Canada, March, 2020.
   </li>  
 
