--- a/_pages/talks-archive.html
+++ b/_pages/talks-archive.html
@@ -21,7 +21,7 @@ permalink: /talks/
   </li>  
   
   <li>
-    <a href="/assets/talks/Furnstahl_INT_July_2020.pptx"><i>Bayesian analysis of EFTs with Jupyter notebooks</i></a> [<a href="/assets/talks/Furnstahl_INT_July_2020_pdf.pdf">pdf version], presented by Dick Furnstahl at the INT program on <a href="https://www.int.washington.edu/PROGRAMS/20-2b/">Beyond-the-Standard-Model Physics with Nucleons and Nuclei<a> (virtual) July, 2020.
+    <a href="/assets/talks/Furnstahl_INT_July_2020.pptx"><i>Uncertainty quantification (UQ) for chiral effective field theory</i></a> [<a href="/assets/talks/Furnstahl_INT_July_2020_pdf.pdf">pdf version], presented by Dick Furnstahl at the INT program on <a href="https://www.int.washington.edu/PROGRAMS/20-2b/">Beyond-the-Standard-Model Physics with Nucleons and Nuclei<a> (virtual) July, 2020.
   </li>  
   
   <li>
