updated software list

--- a/_pages/software-archive.html
+++ b/_pages/software-archive.html
@@ -29,6 +29,13 @@ permalink: /software/
 <ul>
 
  <li>
+  <a href="https://github.com/buqeye/fast-few-body-bayesing">Notebooks and data </a> to reproduce and extend the figures in
+  <i>"Fast &amp; rigorous constraints on chiral three-nucleon forces from few-body observables"</i>
+      by Wesolowski, Svensson, Ekström, Forssén, Furnstahl, Melendez, and Phillips, 
+   <a href="https://arxiv.org/abs/2104.04441">arXiv:2104.04441</a>.
+ </li> 
+
+ <li>
   <a href="https://github.com/buqeye/eigenvector-continuation">Notebooks and associated codes </a> to reproduce and extend the figures in
   <i>"Efficient emulators for scattering using eigenvector continuation"</i>
       by Furnstahl, Garcia, Millican, and Zhang, 
