--- a/_pages/talks-archive.html
+++ b/_pages/talks-archive.html
@@ -65,7 +65,7 @@ Return to <a href="#Contents">Contents</a>
 
 <ul>
   <li>
-    <a href="/assets/talks/Zhang_INT21.pdf"><i>Efficient emulators for three-body scattering using eigenvector continuation"</i></a>, presented by Xilin Zhang, <a href="https://sites.google.com/uw.edu/int/programs/current-program-schedule">INT 21-1b: Nuclear Forces for Precision Nuclear Physics</a>, April, 2021.
+    <a href="/assets/talks/Zhang_INT21.pdf"><i>Efficient emulators for three-body scattering using eigenvector continuation</i></a>, presented by Xilin Zhang, <a href="https://sites.google.com/uw.edu/int/programs/current-program-schedule">INT 21-1b: Nuclear Forces for Precision Nuclear Physics</a>, April, 2021.
   </li>
 
   <li>
