added Jordan DNP 2020 talk

--- a/_pages/talks-archive.html
+++ b/_pages/talks-archive.html
@@ -17,6 +17,12 @@ permalink: /talks/
 <ul>
 
   <li>
+    <a href="/assets/talks/melendez_DNP_2020.pdf"><i>Errors in Effective Field Theory and Why They Matter</i></a>, presented by Jordan Melendez at the <a href="http://meetings.aps.org/Meeting/DNP20/Content/3900">2020 Fall Meeting of the APS Division of Nuclear Physics</a> (virtual) November 1, 2020.
+  </li>
+
+
+
+  <li>
     <a href="/assets/talks/Furnstahl_DNP_November_2020.pptx"><i>Bayesian analysis of EFTs with Jupyter notebooks</i></a> [<a href="/assets/talks/Furnstahl_Richard_SJ00001.pdf">pdf version</a>], presented by Dick Furnstahl at the <a href="http://meetings.aps.org/Meeting/DNP20/Content/3900">2020 Fall Meeting of the APS Division of Nuclear Physics</a> (virtual) October, 2020.
   </li>
 
