duplicated Jordan DNP 2021 talk under Applications

--- a/_pages/talks-archive.html
+++ b/_pages/talks-archive.html
@@ -95,6 +95,11 @@ Return to <a href="#Contents">Contents</a>
   </li>
 
   <li>
+    <a href="/assets/talks/melendez_DNP_2020.pdf"><i>Errors in Effective Field Theory and Why They Matter</i></a>, presented by Jordan Melendez at the <a href="http://meetings.aps.org/Meeting/DNP20/Content/3900">2020 Fall Meeting of the APS Division of Nuclear Physics</a> (virtual) November 1, 2020.
+  </li>
+
+
+  <li>
     <a href="/assets/talks/Drischler_May_28_2020.pdf"><i>Quantifying uncertainties in the nuclear-matter equation of state</i></a>, presented by Christian Drischler, <a href="https://phys.washington.edu/events/2020-05-28/int-online-sint-seminar-quantifying-uncertainties-nuclear-matter-equation-state">online seminar at INT</a>, May, 2020.
   </li>
 
