--- a/_pages/talks-archive.html
+++ b/_pages/talks-archive.html
@@ -15,12 +15,14 @@ permalink: /talks/
 <h2><a name="General">General methods</a></h2>
 
 <ul>
+ 
+   <li>
+    <a href="/assets/talks/phillips_MITP_2020.pdf"><i>Quantifying uncertainties in light-ion reactions using EFT and Bayesian methods</i></a>, presented by Daniel Phillips at the <a href="https://indico.mitp.uni-mainz.de/event/215/overview">MITP workshop on Uncertainties in Calculations of Nuclear Reactions of Astrophysical Interest</a> (virtual) December 10, 2020.
+  </li>
 
   <li>
     <a href="/assets/talks/melendez_DNP_2020.pdf"><i>Errors in Effective Field Theory and Why They Matter</i></a>, presented by Jordan Melendez at the <a href="http://meetings.aps.org/Meeting/DNP20/Session/SA">2020 Fall Meeting of the APS Division of Nuclear Physics</a> (virtual) November 1, 2020.
   </li>
-
-
 
   <li>
     <a href="/assets/talks/Furnstahl_DNP_November_2020.pptx"><i>Bayesian analysis of EFTs with Jupyter notebooks</i></a> [<a href="/assets/talks/Furnstahl_Richard_SJ00001.pdf">pdf version</a>], presented by Dick Furnstahl at the <a href="http://meetings.aps.org/Meeting/DNP20/Content/3900">2020 Fall Meeting of the APS Division of Nuclear Physics</a> (virtual) October, 2020.
