adds Christian's INT talk to talks

--- a/_pages/talks-archive.html
+++ b/_pages/talks-archive.html
@@ -15,7 +15,7 @@ permalink: /talks/
 <h2><a name="General">General methods</a></h2>
 
 <ul>
- 
+
    <li>
     <a href="/assets/talks/Phillips_MITP20.pdf"><i>Quantifying uncertainties in light-ion reactions using EFT and Bayesian methods</i></a>, presented by Daniel Phillips at the <a href="https://indico.mitp.uni-mainz.de/event/215/overview">MITP workshop on Uncertainties in Calculations of Nuclear Reactions of Astrophysical Interest</a> (virtual) December 10, 2020.
   </li>
@@ -72,6 +72,10 @@ Return to <a href="#Contents">Contents</a>
 <h2><a name="Applications">Applications</a></h2>
 
 <ul>
+  <li>
+   <a href="/assets/talks/Drischler_INT-22-2a.pdf"><i>Theoretical advances and uncertainty quantification of neutron-star properties</i></a>, presented by Christian Drischler at the <a href="https://www.int.washington.edu/programs-and-workshops/22-2a">INT Program INT-22-2a "Neutron Rich Matter on Heaven and Earth"</a> July 21, 2022.
+ </li>
+
   <li>
     <a href="/assets/talks/Zhang_INT21.pdf"><i>Efficient emulators for three-body scattering using eigenvector continuation</i></a>, presented by Xilin Zhang, <a href="https://sites.google.com/uw.edu/int/programs/current-program-schedule">INT 21-1b: Nuclear Forces for Precision Nuclear Physics</a>, April, 2021.
   </li>
