--- a/_pages/talks-archive.html
+++ b/_pages/talks-archive.html
@@ -73,6 +73,10 @@ Return to <a href="#Contents">Contents</a>
 
 <ul>
   <li>
+   <a href="/sets/talks/Drischler_CIPANP22_slides_web.pdf"><i>Equation of state of neutron-rich matter and implications for neutron stars</i></a>, presented by Christian Drischler at the <a href="https://agenda.hep.wisc.edu/event/1644/overview">14th Conference on the Intersections of Particle and Nuclear Physics (CIPANP 2022)</a> September 1, 2022.
+  </li>
+
+  <li>
    <a href="/assets/talks/Drischler_INT-22-2a.pdf"><i>Theoretical advances and uncertainty quantification of neutron-star properties</i></a>, presented by Christian Drischler at the <a href="https://www.int.washington.edu/programs-and-workshops/22-2a">INT Program INT-22-2a "Neutron Rich Matter on Heaven and Earth"</a> July 21, 2022.
  </li>
 
